--- a/presets/test/pages/c.hbs
+++ b/presets/test/pages/c.hbs
@@ -5,8 +5,8 @@
         <title>Liquid Page</title>
     </head>
     <body>
-        {{#each _pages}}
-            <a href="{{_url}}">{{title}}</a>
+        {{#each $pages}}
+            <a href="{{$url}}">{{title}}</a>
         {{/each}}
     </body>
 </html>
