--- a/presets/test/templates/home.hbs
+++ b/presets/test/templates/home.hbs
@@ -2,7 +2,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Liquid Page</title>
+        <link rel="stylesheet" href="style.css">
+        <title>Home Page</title>
     </head>
     <body>
         {{#each $pages}}
