--- a/presets/test/templates/post.hbs
+++ b/presets/test/templates/post.hbs
@@ -2,9 +2,16 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="/retro.css">
         <title>{{title}}</title>
     </head>
     <body>
+        <a href="/">... Go back to home</a>
+        <div class="chips">
+            {{#each tags}}
+                <span class="chip">#{{this}}</span>
+            {{/each}}
+        </div>
         {{$body}}
     </body>
 </html>
