--- a/presets/test/pages/index.hbs
+++ b/presets/test/pages/index.hbs
@@ -7,7 +7,7 @@
     </head>
     <body>
     <h1>First off, Handlebars</h1>
-    <h2>This is the page generated using Handlebars without using templates from the templates directory</h1>
+    <h2>This is a <a href="https://handlebarsjs.com/">Handlebars</a> Page</h1>
     <p>The purpose of this Handlebars page is to generate an HTML file with Handlebars that consumes contexts created from the <code>pages</code> directory. 
     <br> This is useful for creating a separate page, like a Home page that contains a list of blog posts like this:</p>
 
