--- a/presets/basic/templates/post.hbs
+++ b/presets/basic/templates/post.hbs
@@ -1,11 +1,17 @@
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="/retro.css">
+        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="/prism.css">
+        <script src="/prism.js" defer></script>
+        {{#equal $buildMode "development"}}
+        <script src="/watcher.js" defer></script>
+        {{/equal}}
         <title>{{title}}</title>
     </head>
-    <body>
+    <body class="line-numbers">
         <a href="/">... Go back to home</a>
         <div class="chips">
             {{#each tags}}
