feat: highlight on build time

--- a/presets/docs/templates/docs.templ
+++ b/presets/docs/templates/docs.templ
@@ -7,8 +7,7 @@ fm-yaml-end */}}
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="/prism.css">
-    <script src="/prism.js" defer></script>
+    <link rel="stylesheet" href="/highlight.css">
     {{ if eq .BuildMode "development" }}
     <script src="/watcher.js" defer></script>
     {{ end }}
